header alignment correction

--- a/frontend/src/components/nav/nav_transparent/navbar_clear.scss
+++ b/frontend/src/components/nav/nav_transparent/navbar_clear.scss
@@ -13,7 +13,7 @@
 
 #header-clear a{
   text-decoration: none;
-  margin: 10px 15px 10px 15px;
+  margin: 10px 11px 10px 15px;
   margin-left: 15px;
   margin-right: 15px;
   font-size: 24px;
@@ -34,11 +34,11 @@
 }
 
 #seperator{
-  height:100%;
+  height: 70%;
   width: 0px;
   border: 1px solid $Green-hex;
   margin-left: 15px;
-  margin-top: 0px;
+  margin-top: 5px;
 }
 
 .hover-underline-animation {
